--- a/wiki/miniz_performance_comparison_v110.wiki
+++ b/wiki/miniz_performance_comparison_v110.wiki
@@ -117,6 +117,42 @@ Decompress:CT_FASTLZ  :FROM:487,260,768 TO:1,000,000,000    4,223 MS
 Decompress:CT_LZHAM   :FROM:202,475,460 TO:1,000,000,000    7,444 MS
 }}}
 
+*File: [http://cs.fit.edu/~mmahoney/compression/textdata.html enwik9] (miniz.c compression level 1 (MZ_BEST_SPEED), zlib set to Z_BEST_SPEED, all other settings are the same as above):*
+{{{
+E:\lzham\compressiontest\test_compression>test_compression_x64.exe E:\dev\corpus\enwik9\enwik9
+x64 version
+Reading test file 'E:\dev\corpus\enwik9\enwik9' which is 1,000,000,000 bytes long.
+
+---------------------------------------------------------------
+Testing Compression rate and speed with various compressors.
+---------------------------------------------------------------
+Compress:CT_STB     :FROM:1,000,000,000 TO:436,564,069 56.34%   10,417 MS
+Compress:CT_MINIZ   :FROM:1,000,000,000 TO:436,564,069 56.34%   10,418 MS
+Compress:CT_CRYPTO  :FROM:1,000,000,000 TO:324,897,277 67.51%   66,169 MS
+Compress:CT_MINILZO :FROM:1,000,000,000 TO:477,237,740 52.28%    7,769 MS
+Compress:CT_ZLIB    :FROM:1,000,000,000 TO:378,355,092 62.16%   21,900 MS
+Compress:CT_BZIP    :FROM:1,000,000,000 TO:295,663,950 70.43%   93,694 MS
+Compress:CT_LIBLZF  :FROM:1,000,000,000 TO:492,987,206 50.70%    6,326 MS
+Compress:CT_LZMA    :FROM:1,000,000,000 TO:201,776,574 79.82% 1,043,293 MS
+Compress:CT_FASTLZ  :FROM:1,000,000,000 TO:487,260,768 51.27%    6,756 MS
+Compress:CT_LZHAM   :FROM:1,000,000,000 TO:202,475,460 79.75%  351,687 MS
+
+---------------------------------------------------------------
+Testing Decompression speed with various decompressors.
+---------------------------------------------------------------
+Decompress:CT_STB     :FROM:436,564,069 TO:1,000,000,000    9,010 MS
+Decompress:CT_MINIZ   :FROM:436,564,069 TO:1,000,000,000    6,530 MS
+Decompress:CT_CRYPTO  :FROM:324,897,277 TO:1,000,000,000   16,786 MS
+Decompress:CT_MINILZO :FROM:477,237,740 TO:1,000,000,000    4,205 MS
+Decompress:CT_ZLIB    :FROM:378,355,092 TO:1,000,000,000    5,612 MS
+Decompress:CT_BZIP    :FROM:295,663,950 TO:1,000,000,000   33,340 MS
+Decompress:CT_LIBLZF  :FROM:492,987,206 TO:1,000,000,000    3,977 MS
+Decompress:CT_LZMA    :FROM:201,776,574 TO:1,000,000,000   12,650 MS
+Decompress:CT_FASTLZ  :FROM:487,260,768 TO:1,000,000,000    4,214 MS
+Decompress:CT_LZHAM   :FROM:202,475,460 TO:1,000,000,000    7,444 MS
+}}}
+
+
 *File: Entire Large [http://www.data-compression.info/Corpora/CalgaryCorpus/ Calgary Corpus] added to a single uncompressed 7zip archive (miniz.c compression level 9):*
 {{{
 E:\lzham\compressiontest\test_compression>test_compression_x64.exe e:\dev\corpus\calgary_corpus.7z
